<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="G_Inputs" Id="{9388cc7f-fbee-4109-83e3-d27f0f401106}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// PLC Rack

	// RIO Rack
	// Digital Inputs
	bAutoModeSelector			AT %I* : BOOL;
	bManualModeSelector			AT %I* : BOOL;
	bStartButton				AT %I* : BOOL;
	bStopButton					AT %I* : BOOL;
	bJoystickEnable				AT %I* : BOOL;
	
	// Analog Inputs 1
	stJoyX 						: ST_AnalogInput;
	stJoyY						: ST_AnalogInput;
	stPositionCylPiston 		: ST_AnalogInput;
	nEncoderValue 				AT %I* : UDINT;
	
	// Analog Inputs 2
	// HPU Interface
	stPressureSupply 			: ST_AnalogInput;
	stPressureReturn 			: ST_AnalogInput;
	// Cylinder
	stPressureCylPistonSide 	: ST_AnalogInput;
	stPressureCylLhvSide 		: ST_AnalogInput;
	stPressureCylRodSide		: ST_AnalogInput;
	// Winch
	stPressureWinchInput 		: ST_AnalogInput;
	stPressureWinchLhvSide 		: ST_AnalogInput;
	stPressureWinchOutput		: ST_AnalogInput;
	stPressureWinchDrain		: ST_AnalogInput;
	
	// Analog Inputs 3 (Multi)
	stFlowWinch					: ST_AnalogInput;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>