<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="G_Sensors" Id="{d28c946e-63b0-41ab-8fee-be9b6a0df66e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fJoystickNormalizedY 	: LREAL;
	fJoystickNormalizedX 	: LREAL;
	fPositionCylPiston  	: LREAL;
	// HPU Interface
	fPressureSupply 		: LREAL;
	fPressureReturn 		: LREAL;
	// Cylinder
	fPressureCylPistonSide 	: LREAL;
	fPressureCylLhvSide 	: LREAL;
	fPressureCylRodSide		: LREAL;
	// Winch
	fPressureWinchInput 	: LREAL;
	fPressureWinchLhvSide 	: LREAL;
	fPressureWinchOutput	: LREAL;
	fPressureWinchDrain		: LREAL;
	fWinchEncoderPosition 	: LREAL;
	fWinchWirePosition 		: LREAL;
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>